completed api for all search criteria
