# src/config/openapi.yaml
@@ -299,6 +299,19 @@ paths:
           style: form
           explode: true
           description: difficulty level from 1 to 4
+        - name: distance
+          in: query
+          schema:
+            type: array
+            items:
+              type: string
+              pattern: "^[0-9].*?.?[0-9].*,[0-9].*?.?[0-9].*"
+          required: false
+          style: form
+          explode: true
+          description: >
+            distance filter from-to search (e.g. 2,3 , 4,5)
+            searches for trails with distance in range 2-3km and 4-5km
       responses:
         "200":
           description: OK
